# gearoenix-bgfx

./: .gitignore  CMakeLists.txt  README.md
cmake/: gx-bgfx.cmake
editor/ui/: gx-editor-ui-menu-bar.cpp
examples/: CMakeLists.txt
examples/001-empty-window/: CMakeLists.txt  gx-ex-001-main.cpp
examples/002-hello-triangle/: CMakeLists.txt  gx-ex-002-main.cpp
examples/006-hello-gltf/: gx-ex-006-main.cpp
gearoenix/: CMakeLists.txt
gearoenix/bgfx/: gx-bgfx-engine.cpp
gearoenix/core/: CMakeLists.txt  gx-cr-allocator.hpp  gx-cr-application.cpp  gx-cr-application.hpp  gx-cr-function-loader.hpp
gearoenix/core/asset/: gx-cr-asset-manager.cpp
gearoenix/core/ecs/: gx-cr-ecs-entity.hpp  gx-cr-ecs-world.hpp
gearoenix/core/event/: gx-cr-ev-engine.cpp
gearoenix/core/macro/: gx-cr-mcr-concatenate.hpp  gx-cr-mcr-disable-warnings.hpp  gx-cr-mcr-enable-warnings.hpp  gx-cr-mcr-lock.hpp
gearoenix/physics/: gx-phs-engine.cpp
gearoenix/physics/constraint/: gx-phs-cns-window-placer.cpp  gx-phs-cns-window-scaler.cpp
gearoenix/platform/: CMakeLists.txt  gx-plt-application.cpp  gx-plt-application.hpp  gx-plt-arguments.cpp  gx-plt-arguments.hpp  gx-plt-bgfx-flags.hpp  gx-plt-build-configuration.hpp  gx-plt-key.cpp  gx-plt-key.hpp  gx-plt-log.hpp  gx-plt-main-entry.hpp
gearoenix/platform/bgfx/: gx-plt-bgfx-application.cpp  gx-plt-bgfx-application.hpp  gx-plt-bgfx-main-entry.hpp
gearoenix/platform/stream/: gx-plt-stm-asset.cpp
gearoenix/render/: CMakeLists.txt  gx-rnd-engine.cpp  gx-rnd-engine.hpp  gx-rnd-limitations.hpp  gx-rnd-vertex.cpp  gx-rnd-vertex.hpp
gearoenix/render/camera/: gx-rnd-cmr-arc-controller.cpp  gx-rnd-cmr-jet-controller.cpp  gx-rnd-cmr-manager.cpp  gx-rnd-cmr-orthographic.cpp  gx-rnd-cmr-perspective.cpp
gearoenix/render/engine/: gx-rnd-eng-engine.cpp
gearoenix/render/font/: gx-rnd-fnt-2d.cpp  gx-rnd-fnt-manager.cpp
gearoenix/render/graph/node/: gx-rnd-gr-nd-forward-pbr.cpp  gx-rnd-gr-nd-irradiance-convoluter.cpp  gx-rnd-gr-nd-mipmap-generator.cpp  gx-rnd-gr-nd-node.cpp  gx-rnd-gr-nd-radiance-convoluter.cpp  gx-rnd-gr-nd-skybox-cube.cpp  gx-rnd-gr-nd-skybox-equirectangular.cpp  gx-rnd-gr-nd-unlit.cpp
gearoenix/render/graph/tree/: gx-rnd-gr-tr-pbr.cpp
gearoenix/render/light/: gx-rnd-lt-cascade-info.cpp  gx-rnd-lt-light.cpp
gearoenix/render/material/: gx-rnd-mat-manager.cpp  gx-rnd-mat-manager.hpp  gx-rnd-mat-pbr.cpp  gx-rnd-mat-pbr.hpp
gearoenix/render/mesh/: gx-rnd-msh-builder.cpp  gx-rnd-msh-builder.hpp  gx-rnd-msh-manager.cpp  gx-rnd-msh-manager.hpp  gx-rnd-msh-mesh.cpp  gx-rnd-msh-mesh.hpp
gearoenix/render/model/: gx-rnd-mdl-mesh.cpp
gearoenix/render/reflection/: gx-rnd-rfl-manager.cpp  gx-rnd-rfl-reflection.cpp  gx-rnd-rfl-runtime.cpp
gearoenix/render/scene/: gx-rnd-scn-builder.cpp  gx-rnd-scn-builder.hpp  gx-rnd-scn-logo.cpp  gx-rnd-scn-manager.cpp  gx-rnd-scn-manager.hpp  gx-rnd-scn-scene.cpp  gx-rnd-scn-scene.hpp  gx-rnd-scn-ui.cpp
gearoenix/render/skybox/: gx-rnd-sky-cube.cpp  gx-rnd-sky-skybox.cpp
gearoenix/render/texture/: gx-rnd-txt-manager.cpp  gx-rnd-txt-texture.cpp
gearoenix/render/widget/: gx-rnd-wdg-button.cpp  gx-rnd-wdg-edit.cpp  gx-rnd-wdg-modal.cpp  gx-rnd-wdg-text.cpp
