CMAKE_MINIMUM_REQUIRED(VERSION 3.18.4 FATAL_ERROR)

PROJECT(Gearoenix)

SET(PROJECT_DESCRIPTION "A cross-platform C++ game engine.")

SET(GX_VERSION_MAJOR 0)
SET(GX_VERSION_MINOR 3)
SET(GX_VERSION_PATCH 0)
SET(GX_VERSION "${GX_VERSION_MAJOR}.${GX_VERSION_MINOR}.${GX_VERSION_PATCH}")

# Test coverage
OPTION(GX_COVERAGE_ENABLED "Enables the measurement of test coverages" OFF)

IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    SET(GX_IN_LINUX TRUE)
ELSEIF (MSVC)
    SET(GX_IN_WINDOWS TRUE)
ELSEIF(APPLE)
    SET(GX_IN_MACOS TRUE)
ENDIF()

IF(GX_IN_LINUX AND GX_COVERAGE_ENABLED)
    MESSAGE(STATUS "Coverage enabled")
    SET(GX_COVERAGE_COMPILER_FLAGS "-fprofile-instr-generate -fcoverage-mapping")
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GX_COVERAGE_COMPILER_FLAGS}")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GX_COVERAGE_COMPILER_FLAGS}")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${GX_COVERAGE_COMPILER_FLAGS}")
    SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${GX_COVERAGE_COMPILER_FLAGS}")
ENDIF()

SET(GX_SDK_PATH "${CMAKE_SOURCE_DIR}/sdk")
SET(GX_SDK_LIB_PATH "${GX_SDK_PATH}/libs/")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/)
INCLUDE(gx-builder)
INCLUDE(gx-compile-lib)
INCLUDE(gx-download-file)
INCLUDE(gx-flag-util)
INCLUDE(gx-bgfx)

GX_FIND_BUILDER()

MESSAGE(STATUS "Gearoenix is going to be compiled for ${CMAKE_SYSTEM_NAME}")

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
IF (GX_IN_WINDOWS)
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
    SET(CMAKE_CXX_FLAGS "/std:c++latest ${CMAKE_CXX_FLAGS}")
    GX_REPLACE_FLAG(CMAKE_CXX_FLAGS "/W3" "/W4")
ELSE ()
    SET(CMAKE_CXX_FLAGS "-std=c++20 ${CMAKE_CXX_FLAGS}")
ENDIF ()

IF (APPLE)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -x objective-c")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -x objective-c++")
ENDIF ()

GX_PREPARE_BGFX()

# SET(GX_BULLET3_PATH "${GX_SDK_PATH}/bullet3")
# GX_DOWNLOAD_FILE("https://github.com/bulletphysics/bullet3/archive/master.zip" "${GX_BULLET3_PATH}")
# GX_COMPILE_LIB(${GX_BULLET3_PATH})

SET(GX_BOOST_PATH "${GX_SDK_PATH}/boost")
GX_DOWNLOAD_FILE("https://github.com/boostorg/boost/archive/refs/tags/boost-1.76.0.zip" "${GX_BOOST_PATH}")
INCLUDE_DIRECTORIES(SYSTEM ${GX_BOOST_PATH})

ADD_SUBDIRECTORY(gearoenix)
ADD_SUBDIRECTORY(editor)
ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(tests)